--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dom-storage": "^2.0.2",
     "ejs": "2.4.1",
     "express": "4.13.3",
     "firebase": "^3.3.0",
